--- a/DeleeRefreshMonkey/AppShell.xaml
+++ b/DeleeRefreshMonkey/AppShell.xaml
@@ -4,11 +4,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:DeleeRefreshMonkey"
+    xmlns:views="clr-namespace:DeleeRefreshMonkey.Views"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Title="Monkeys"
+        ContentTemplate="{DataTemplate views:MonkeyView}"
+        Route="Monkeys" />
 
 </Shell>
